<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/download_list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="#ffffff"
        android:dividerHeight="10dip" >
    </ListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_pause_all"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:onClick="pause_all"
            android:text="@string/pause_all" />

        <Button
            android:id="@+id/btn_delete_all"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:onClick="delete_all"
            android:text="@string/delete_all" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:onClick="add"
            android:text="@string/add" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_traffic"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:onClick="traffic_stat"
            android:text="@string/traffic_statistics" />

        <Button
            android:id="@+id/btn_leave"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:onClick="leave"
            android:text="@string/leave" />
    </LinearLayout>

</LinearLayout>